--- a/css/style.css
+++ b/css/style.css
@@ -235,6 +235,11 @@ header .profile .info span:last-child{
     font-weight: 400;
 }
 
+.sent span::first-letter,
+.received span::first-letter{
+    text-transform: uppercase;
+}
+
 .date{
     padding-top: 5px;
     font-size: 10px;
